css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Ubuntu Mono', monospace, sans-serif;
    height: 100vh;
    width: 100vw;
    overflow-x: hidden; /* Prevent horizontal scrolling */
    display: flex;
    flex-direction: column;
    background: linear-gradient(45deg, #593C8F, #322E18);
    background-size: 100% 100%; /* Ensure the background fully covers the viewport */
    background-repeat: no-repeat; /* Prevent background repetition */
    background-attachment: fixed; /* Makes the background stay fixed on scroll */
    animation: gradient 20s ease infinite;
    color: white;
    max-width: 100%;
}

.navbar {
    position: fixed; /* Fix the navbar to the top */
    top: 0; /* Align it to the top */
    left: 0; /* Align it to the left */
    width: 100%; /* Full width */
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    z-index: 1000; /* Ensure it stays above other content */
    background-color: transparent; /* Default transparent background */
    transition: background-color 0.4s ease; /* Smooth background transition */
}

.navbar.scrolled {
    background-color: rgba(40, 24, 50, 0.8); /* Slightly opaque background for readability */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for more depth */
}

/* Main content Flexbox */
.main {
    display: flex;
    justify-content: center; /* Center the main content horizontally */
    align-items: center;
    padding: 40px;
    width: 100%; /* Full width */
    flex-grow: 1;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

p {
    font-size: 125%;
}

.site-name h1 {
    margin-left: 20px;
    font-size: 24px;
}

/* Specific styles for projects, about, and experience pages */
.projects-page .main,
.about-page .main,
.experience-page .main {
    margin-top: 80px;
}

span {
    color: pink;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 30px;
    margin-right: 20px;
}

/* Highlight the active tab */
.nav-links .active {
    color: pink; /* Highlight color */
    font-weight: bold;
    border-bottom: 2px solid pink;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: white;
}

.navbar a {
    transition: all .05s ease;
}

.navbar a:hover {
    color: pink;
    font-size: 20px;
}

.contact a:hover {
    color: pink;
}

.main .contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px; /* Space between icons */
}

.contact a {
    color: white; /* Make sure the icons are visible */
    font-size: 24px;
}

.introduction-text {
    flex: 0;
    font-size: 180%;
    margin-left: 2%;
    margin-right: 30px; /* Space between text and image */
}

.introduction-text h1 {
    font-family: "Courier Prime", sans-serif;
    font-size: 400%;
    margin: 10px 0;
}

.typing {
    border-right: 5px solid;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    animation: typing 1.1s steps(6), cursor .5s step-end infinite alternate;
}

.bedroom-image img {
    height: auto;
    margin-right: 10%;
}

/* Background gradient */
@keyframes gradient {
    0% {
        background-position: 0% 50%;
        background-color: #593C8F, #322E18;
    }
    50% {
        background-position: 100% 50%;
        background-color: #E39FF6, #8A80E5;
    }
    100% {
        background-position: 0% 50%;
        background-color: #593C8F, #322E18;
    }
}

/* Cursor blinking */
@keyframes cursor {
    50% {
        border-color: transparent
    }
}

/* Typing Effect */
@keyframes typing {
    from {
        width: 0;
    }
}

/* Responsiveness */
@media (max-width: 1098px) {
    .main {
        display: flex;
        flex-direction: column;
        align-content: space-between;
    }
    .main .contact {
        display: flex;
        flex-direction: row;
        justify-content: left;
        gap: 20px; /* Space between icons */
        padding: 15px;
        margin-bottom: 20px;
    }
    .main .introduction-text {
        margin-bottom: 20px;
    }
    
    /* Typing Effect specific to smaller screens */
    .typing {
        border-right: 5px solid;
        width: 6ch; /* Width for "kelly." */
        white-space: nowrap;
        overflow: hidden;
        animation: typing-small 1.3s steps(6), cursor .5s step-end infinite alternate;
    }
}

/* Keyframe for Typing on Small Screens */
@keyframes typing-small {
    from {
        width: 0;
    }
    to {
        width: 6ch; /* Matches the width of "kelly." */
    }
}

/* Keyframes for the pulse effect */
@keyframes pulse-animation {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1); /* Scale up */
    }
    100% {
        transform: scale(1); /* Scale back to original */
    }
}


/* Projects Page */
.projects-section {
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.projects-title {
    display: flex;
    justify-content: center;
    padding: 20px;
}

.projects-title h1 {
    font-family: "Courier Prime", sans-serif;
    font-size: 400%;
    margin: 10px 0;
}

/* This only changes this particular animation duration */
.animate__animated.animate__bounce {
    --animate-duration: 2s;
}

.projects-group {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.project {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    flex-basis: 30%; /* Controls the width of each item */
    max-width: 80%;  /* Limits the maximum width */
    min-width: 80%;  /* Ensures a minimum width */
    margin: 15px;    /* Optional: Adds some margin between items */
    padding: 20px;
    font-size: 14px;
}

.project .project-tools {
    padding-top: 15px;
}

.project-line {
    display: flex;
    justify-content: space-between;
    padding-bottom: 2%;
}

.glass {
    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border-radius: 20px;
    border: 1px solid rgba(255, 255, 255, 0.18);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
}

/* Experience Page */
.experience-section {
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.experience-title {
    display: flex;
    justify-content: center;
    padding: 20px;
}

.experience-title h1 {
    font-family: "Courier Prime", sans-serif;
    font-size: 400%;
    margin: 10px 0;
}

.experience-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.tool {
    display: flex;
    flex-direction: column;
    align-items: center; /* Center content within the container */
    justify-content: center; /* Center content vertically */
    border-radius: 10px;
    flex-basis: 30%;
    margin: 15px;
    padding: 20px;
    font-size: 14px;
    
    max-width: 40%;  /* Limits the maximum width */
    min-width: 40%;  /* Ensures a minimum width */
    
    height: 250px; /* Set a fixed height for all tool boxes */
    flex-grow: 1;
    flex-shrink: 1; /* Allow containers to shrink or grow proportionally */
}

.tool h3 {
    text-align: center;
}

.tool img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%; /* Ensure the image takes up the full width of the container */
    height: auto; /* Maintain aspect ratio */
    max-height: 150px; /* Set a maximum height for all images to be equal */
    object-fit: contain; /* Ensures the image scales to fit within the container without distortion */
    padding-bottom: 20px;
    transition: transform 2.0s ease; /* Smooth transition for the scale */
}

.tool:hover img {
    animation: pulse-animation 1s infinite; /* Apply pulse animation on hover */
}

.languages-title, .databases-title {
    text-align: center;
    padding: 25px;
    font-size: 170%;
}

.languages {
    padding-bottom: 50px;
}

/* About Page */
.about-title h1 {
    font-family: "Courier Prime", sans-serif;
    font-size: 400%;
    margin: 10px 0;
}

.about-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.about-img {
    flex-basis: 35%;          /* 35% of the width for the image */
    display: flex;
    justify-content: center;   /* Center the image horizontally */
    align-items: flex-start;   /* Align the image at the top */
    padding: 20px;             /* Optional: Add some padding */
}

.about-img img {
    width: 100%;              /* Make the image take up the full width of the container */
    height: auto;             /* Maintain aspect ratio */
    max-width: 500px;         /* Optional: Limit the maximum width of the image */
    object-fit: cover;        /* Ensures the image fits without distortion */
    border-radius: 50%;
}

.about-group {
    display: flex;
    flex-direction: row;
}

.about-body {
    flex-basis: 65%;           /* 65% of the width for the body */
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 20px;
}

.about-body-header {
    padding-bottom: 20px;
}

#about-name {
    font-size: 180%;
}

